--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "build": "webpack -d",
-      "dev": "babel-watch ./server.js"
+    "build": "webpack -d",
+    "dev": "grunt dev"
   },
   "author": "tilau",
   "license": "ISC",
@@ -15,10 +15,16 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-watch": "^2.0.3",
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-concurrent": "^2.3.1",
+    "grunt-exec": "^1.0.1",
+    "grunt-webpack": "^1.0.18",
     "hapi": "^15.2.0",
     "inert": "^4.0.2",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
-    "webpack": "^1.13.3"
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   }
 }
