--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -d",
+    "build": "grunt dev",
     "dev": "grunt dev"
   },
   "author": "tilau",
@@ -24,6 +24,10 @@
     "inert": "^4.0.2",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
+    "react-redux": "^4.4.6",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
